--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-converter": "^4.2.0",
+    "framer": "^2.3.0",
+    "framer-motion": "^9.0.2",
     "next": "latest",
     "next-pdf": "^0.0.1",
     "next-themes": "^0.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-drawrect": "^1.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.4.0",
