--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@simplepdf/react-embed-pdf": "^1.3.0",
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-converter": "^4.2.0",
     "framer-motion": "^9.0.2",
@@ -17,6 +18,7 @@
     "react-drawrect": "^1.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.4.0",
+    "react-pdf": "^6.2.2",
     "react-scroll": "^1.8.7",
     "react-webcam": "^7.0.1",
     "save": "^2.9.0",
