--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^4.11.0",
     "react-pdf": "^6.2.2",
     "react-scroll": "^1.8.7",
+    "react-swipeable": "^7.0.1",
     "react-webcam": "^7.0.1",
     "save": "^2.9.0",
     "tailwind-scrollbar-hide": "^1.1.7"
